--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-    {{message}}
-  <h1>hello h</h1>
-</body>
-</html>
+<h1>Все получается, так здорово, господь помогает во всем так классно, бесконечная благодрность... )))</h1>
+{{fortune}}
+{{> part}}
