--- a/static/sass/_vars.sass
+++ b/static/sass/_vars.sass
@@ -1,13 +1,5 @@
 $default-font: "roboto-example", sans-serif
-$accent: lighten(#f58220, 10%)
+$accent:  darken(#c786b7, 20%)
 $goldMetalic:  darken(#D4AF37, 20%)
-$main-color: #25262b
-$transit: all .3s ease
 
-
-$shadow-1: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
-$shadow-2: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)
-$shadow-3: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
-$shadow-4: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
-$shadow-5: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)
-$shadow-hover: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+$md-box-shadow-1: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12)
