--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -2,50 +2,94 @@
 @import "libs"
 @import "vars"
 
-html
-	overflow-x: hidden
 
-body
-	font-size: 20px
-	min-width: 320px
-	position: relative
-	line-height: 1.5
-	font-weight: normal
-	// font-family: ProximaNova, serif
-	text-decoration: none
-	overflow-x: hidden
-	color: #000
-	background: red
-
-button, input
-	outline: none
-
+img
+	width: 100%
 li
 	list-style-type: none
+p
+	font-size: 18px
+hr
+	margin-bottom: 30px
+	color: #999
 
-a
-	text-decoration: none
-	color: black
-
-.h1
-
-.h2
-
-
-.hidden
-	visibility: hidden
+.hover-color
+	color: $accent
+	transition: all .3s ease
 
 .wrapper 
 	margin-right: auto
 	margin-left: auto
-	width: 1170px
+	max-width: 1170px
 	position: relative
+	min-height: 100vh
+
+.h2
+	text-transform: uppercase
+	text-align: center
+	margin: 40px 0
+
+// header
+.header
 	display: flex
 	justify-content: space-between
-	align-items: center
+	.logo
+		width: 280px
+		margin-top: 40px
+	.sky
+		width: 250px
+		margin-top: 20px
+		margin-left: 40px
+	.soon
+		width: 250px
+		margin-top: -50px
+
+.main-menu
+	margin-top: -20px
+	ul
+		display: flex
+		justify-content: center
+	li
+		margin-right: 30px
+		text-transform: uppercase
+		font-family: 'Lora', sans-serif
+		font-weight: 600
+		font-size: 18px
+	a
+		color: #444
+		&:hover
+			@extend .hover-color
+
+// about
+.about
+	padding: 20px 0
+	text-align: center
+	// color: $accent
+	text-shadow: 0 1px 2px $accent
+	
+.aphorisms-container
+	display: flex
+	
+	justify-content: space-between
 	flex-wrap: wrap
 
+	.aphorisms-item
+		box-shadow: $md-box-shadow-1
+		margin: 10px
+		width: 250px
+	.aphorisms-item-top
+		background: linear-gradient(40deg,#45cafc,#303f9f)
+		padding: 5px 20px
+		h2
 
-/*** начало кода! ***/
+			color: white
+
+	.aphorisms-item-body
+		text-align: center
+		padding: 10px
+		font-family: 'Lora', sans-serif
+
 
 @import "media" // Всегда в конце
+
+	
