--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -13,6 +13,13 @@ hr
 	margin-bottom: 30px
 	color: #999
 
+h2
+	font-size: 20px
+
+a
+	text-decoration: none
+	color: #333
+
 .hover-color
 	color: $accent
 	transition: all .3s ease
@@ -23,6 +30,7 @@ hr
 	max-width: 1170px
 	position: relative
 	min-height: 100vh
+	margin-bottom: 200px
 
 .h2
 	text-transform: uppercase
@@ -60,13 +68,14 @@ hr
 		&:hover
 			@extend .hover-color
 
-// about
+/*** about  ***/
 .about
 	padding: 20px 0
+	padding-top: 35px
 	text-align: center
-	// color: $accent
 	text-shadow: 0 1px 2px $accent
 	
+/*** aphorisms  ***/
 .aphorisms-container
 	display: flex
 	
@@ -77,7 +86,9 @@ hr
 		box-shadow: $md-box-shadow-1
 		margin: 10px
 		width: 250px
+		border-radius: 4px
 	.aphorisms-item-top
+		border-radius: 4px 4px 0 0 
 		background: linear-gradient(40deg,#45cafc,#303f9f)
 		padding: 5px 20px
 		h2
@@ -89,7 +100,61 @@ hr
 		padding: 10px
 		font-family: 'Lora', sans-serif
 
+	.aphorisms-header
+		width: 100%
+		padding-bottom: 40px
+		padding-top: 20px
+		h2
+			text-transform: uppercase
+			text-align: center
+			
+	.aphorisms-all
+		display: flex
+		justify-content: flex-end
+		width: 100%
+		font-size: 20px
+		padding: 10px
+		text-shadow: 0 1px 2px $accent
+	
+/*** notes  ***/
+.notes-container
+	display: flex
+	
+	justify-content: space-between
+	flex-wrap: wrap
+
+	.notes-item
+		box-shadow: $md-box-shadow-1
+		margin: 10px
+		width: 250px
+		border-radius: 4px
+	.notes-item-top
+		border-radius: 4px 4px 0 0
+		background: linear-gradient(40deg,#ffd86f,#fc6262)
+		padding: 5px 20px
+		h2
+
+			color: white
+
+	.notes-item-body
+		text-align: center
+		padding: 10px
+		font-family: 'Lora', sans-serif
+
+	.notes-header
+		width: 100%
+		padding-bottom: 40px
+		padding-top: 20px
+		h2
+			text-transform: uppercase
+			text-align: center
+			
+	.notes-all
+		display: flex
+		justify-content: flex-end
+		width: 100%
+		font-size: 20px
+		padding: 10px
+		text-shadow: 0 1px 2px $accent
 
 @import "media" // Всегда в конце
-
-	
