--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,10 +13,38 @@
       <p>Доброго дня! Меня зовут Дмитрий Зорин. На этом ресурсе я делюсь накопленным опытом, который так или иначе
         связан с самопознанием, развитием, поиском себя. Мне нравится позиционировать себя как молодого ученого
         исследующего
-        разные уголки нашей не объятной вселенной и делиться с вами всем этим добром.</p>
+        разные уголки нашей не объятной вселенной и делиться всем этим.</p>
     </div>
 
-    <section class="aphorisms-container">
+    <h2>Трансформация личности</h2>
+    <div class="text">
+      <p> Если ты достиг совершенной внутренней гармонии, наслаждаешься счастьем жизни во всех ее проявлениях, скорее
+        всего здесь ты найдешь мало интересного, но если видишь
+        как еще можно улучшить данный ресурс пожалуйста <a target="_blank" href="https://vk.com/medonomator">напиши</a>
+        мне. Если же ты жаждишь глубинной
+        внутренней трансформации здесь есть все для этого. Безусловно ключевым критерием является готовность и
+        открытость новому...
+      </p>
+
+      <p>Итак счастье, единственно истинный и главный компонент жизни. Если нет счастья или его мало, жизнь не имеет
+        смысла, она
+        скучна и сера. Счастье то что наполняет жизнь, делает ее яркой и красочной. Каждый человечек живущий на земле
+        желает
+        быть как можно более счастливым, радоваться и наслаждаться жизнью. Счастье это весьма эфемерное понятие, но
+        однозначно
+        это роднится со словами, радость, любовь. Различные внешние жизненные ситуации могут вызывать эту внутреннюю
+        радость...
+        Но вот не задача, любое внешнее проявление крайне не стабильно, время течет, события меняются с бешеной
+        скорость, сейчас
+        что-то появилось радость есть оно ушло и радость ушла. Получается радость находится в зависимости от внешнего
+        фактора,
+        но разве это правильно ? Есть еще более удручающий факт, любое внешнее проявление кроме любимова дела (хобби)
+        имеет
+        природу весьма быстро приедаться...
+      </p>
+    </div>
+
+    {{!-- <section class="aphorisms-container">
 
       <div class="aphorisms-header">
         <h2>Случайные афоризмы</h2>
@@ -62,7 +90,7 @@
         <a href="#">Читать все заметки...</a>
       </div>
 
-    </section>
+    </section> --}}
 
   </div>
   {{>footer}}
