--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -10,28 +10,41 @@
     {{>header}}
 
     <div class="about">
-      <p>Aфоризм - это житейская мудрость, краткая, емкая, законченная мысль, которая при должном употреблении может
+      <p>Здесь я собираю лучшие на мой вкус афоризмы. Aфоризм - это житейская мудрость, краткая, емкая, законченная
+        мысль, которая при должном употреблении может
         произвести
-        здвиг в сознании. При чтении, не всегда, но может произойти что-то типа микро-озарения в той или иной области и
-        в этом
-        заложен их фундаментальный смысл. Если начать систематически перепрошивать свое подсознание афоризмами, в
-        короткий срок
-        будет наблюдаться трансформация личности человека. Можно сказать постепенное оздаровление личности. Ведь все
-        исходит из
-        мыслей, что мыслим то чувствуем, что чувствуем то проживаем. Здесь я собрал наиболее сильные и актуальные
-        афоризмы с
-        точки зрения моего внутреннего фильтра. Все что требуется от вас это начать систематически читать афоризмы лучше
-        всего
-        это делать с помощью "генератора случайных афоризмов", либо по фильтру. Главное систематически читать хотя бы по
+        здвиг в сознании. При чтении, не всегда, но может произойти что-то типа микро-озарения в той или иной области.
+        На что и направлен их основной смысл. Если начать систематически перепрошивать свое подсознание афоризмами, то в
+        короткий срок будет наблюдаться трансформация личности. Можно сказать постепенное оздаровление личности, что в
+        итоге
+        приведет в более светлым и чистим мыслям.
+        А как извество, что мыслим то чувствуем, что чувствуем то и проживаем. Все что требуется от вас это начать
+        систематически читать, перечитывать афоризмы. Так-же можно
+        читать с помощью "генератора случайных афоризмов". Главное ежедневно уделять этому немного времени, хотя бы по
         5-10
         мин в день, будут происходит микро-озарения что повлечет более свежий взгляд на мир и вещи в нем. Приятных
         озарений...</p>
     </div>
 
     <section class="aphorisms-container">
-
       <div class="aphorisms-header">
         <h2>Фильтр</h2>
+
+        <div class="filter-block">
+          <select name="" id="">
+            <option value="Все">Все</option>
+            <option value="Великие люди">Великие люди</option>
+            <option value="Карлос кастанеда">Карлос кастанеда</option>
+          </select>
+
+          <select name="Категория" id="">
+            <option value="Все">Все</option>
+            <option value="Счастье">Счастье</option>
+            <option value="Любовь">Любовь</option>
+            <option value="Труд">Труд</option>
+          </select>
+        </div>
+
       </div>
 
       {{#each aphorisms}}
