--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,19 +10,17 @@
     {{>header}}
 
     <div class="about">
-      <p>Доброго дня! Меня зовут Дмитрий Зорин. На этом ресурсе я делюсь накопленным опытом, который так или иначе
-        связан с самопознанием, развитием, поиском себя. Мне нравится позиционировать себя как молодого ученого
+
+      <p>Доброго дня! На этом ресурсе я делюсь опытом из областей
+        связаных с самопознанием, развитием, поиском себя. Мне нравится позиционировать себя как молодого ученого
         исследующего
         разные уголки нашей не объятной вселенной и делиться всем этим.</p>
     </div>
 
-    <h2>Трансформация личности</h2>
+    <h2>Личностная трансформация</h2>
     <div class="text">
-      <p> Если ты достиг совершенной внутренней гармонии, наслаждаешься счастьем жизни во всех ее проявлениях, скорее
-        всего здесь ты найдешь мало интересного, но если видишь
-        как еще можно улучшить данный ресурс пожалуйста <a target="_blank" href="https://vk.com/medonomator">напиши</a>
-        мне. Если же ты жаждишь глубинной
-        внутренней трансформации здесь есть все для этого. Безусловно ключевым критерием является готовность и
+      <p>Если ты жаждишь глубинной
+        внутренней трансформации этот ресурс поможет тебе. Безусловно ключевым критерием является готовность и
         открытость новому...
       </p>
 
