--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
     {{>header}}
 
     <div class="about">
-      <p>Доброго дня! Меня зовут Дмитрий Зорин. На этом ресурсе я делюсь накопленным опытом, который так или иначе
+      <p>На этом ресурсе я делюсь накопленным опытом, который так или иначе
         связан с самопознанием, развитием, поиском себя. Мне нравится позиционировать себя как молодого ученого
         исследующего
         разные уголки нашей не объятной вселенной и делиться всем этим.</p>
