--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -8,13 +8,12 @@
 <body>
   <div class="wrapper">
     {{>header}}
-
     <div class="about">
       <p>Здесь я собираю лучшие на мой вкус афоризмы. Aфоризм - это житейская мудрость, краткая, емкая, законченная
         мысль, которая при должном употреблении может
         произвести
-        здвиг в сознании. При чтении, не всегда, но может произойти что-то типа микро-озарения в той или иной области.
-        На что и направлен их основной смысл. Если начать систематически перепрошивать свое подсознание афоризмами, то в
+        здвиг в сознании. При чтении, не всегда, но может произойти что-то типа микро-озарения в той или иной области,
+        на что и направлен их основной смысл. Начав систематически перепрошивать свое подсознание афоризмами, в
         короткий срок будет наблюдаться трансформация личности. Можно сказать постепенное оздаровление личности, что в
         итоге
         приведет в более светлым и чистим мыслям.
@@ -31,17 +30,16 @@
         <h2>Фильтр</h2>
 
         <div class="filter-block">
-          <select name="" id="">
+          {{!-- <select name="" id="">
             <option value="Все">Все</option>
             <option value="Великие люди">Великие люди</option>
             <option value="Карлос кастанеда">Карлос кастанеда</option>
-          </select>
+          </select> --}}
 
-          <select name="Категория" id="">
-            <option value="Все">Все</option>
-            <option value="Счастье">Счастье</option>
-            <option value="Любовь">Любовь</option>
-            <option value="Труд">Труд</option>
+          <select name="Категория" id="filter-block-select">
+            {{#each aphorisms.categories}}
+            <option value={{this.machineName}}>{{this.name}}</option>
+            {{/each}}
           </select>
         </div>
 
@@ -56,13 +54,13 @@
         <div class="aphorisms-item-body">
           <p>{{this.body}}</p>
         </div>
+        <div class="aphorisms-tags">{{this.tags.[0].name}}</div>
       </div>
       {{/each}}
 
       {{!-- <div class="aphorisms-all">
         <a href="#">Читать все афоризмы...</a>
       </div> --}}
-
     </section>
 
   </div>
