--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -22,7 +22,7 @@
 <div class="main-menu">
   <ul>
     <li><a href="/">Главная</a></li>
-    <li><a href="/aphorisms">Афоризмы</a></li>
+    <li><a href="/aphorisms/1/all">Афоризмы</a></li>
     <li><a href="/notes">Заметки</a></li>
     <li><a href="/techniques">Техники</a></li>
   </ul>
