--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -19,6 +19,6 @@
 <!-- iOS Safari -->
 <meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
-<link rel="stylesheet" href="{{path}}css/normalize.css" />
+{{!-- <link rel="stylesheet" href="static/normalize.css" /> --}}
 <link rel="stylesheet" href="{{path}}css/main.min.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
