--- a/views/techniques.hbs
+++ b/views/techniques.hbs
@@ -10,7 +10,7 @@
     {{>header}}
 
     <div class="about">
-      <p>This is will description on this part. (Techniques)</p>
+      <p>В разработке...</p>
     </div>
 
   </div>
