--- a/views/notes.hbs
+++ b/views/notes.hbs
@@ -10,7 +10,7 @@
     {{>header}}
 
     <div class="about">
-      <p>This is will description on this part. (Notes)</p>
+      <p>В разработке...</p>
     </div>
 
   </div>
