--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -24,7 +24,7 @@
         мин в день, будут происходит микро-озарения что повлечет более свежий взгляд на мир и вещи в нем. Приятных
         озарений...</p>
     </div>
-{{!-- 
+
     <div class="aphorisms-header">
       <h2>Фильтр</h2>
 
@@ -58,12 +58,17 @@
           <p>{{this.body}}</p>
         </div>
         <div class="aphorisms-tags">
-  
+          {{!-- {{#each aphorisms.tags}}
+          <span>{{../this.name}}</span>
+          <span>{{../this.author}}</span>
+          {{/each}} --}}
         </div>
       </div>
       {{/each}}
-
-    </section> --}}
+      {{!-- <div class="aphorisms-all">
+        <a href="#">Читать все афоризмы...</a>
+      </div> --}}
+    </section>
 
   </div>
   {{>footer}}
