--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -58,10 +58,9 @@
           <p>{{this.body}}</p>
         </div>
         <div class="aphorisms-tags">
-          {{!-- {{#each aphorisms.tags}}
-          <span>{{../this.name}}</span>
-          <span>{{../this.author}}</span>
-          {{/each}} --}}
+          {{#each this.tags}}
+          <span>{{this.name}}</span>
+          {{/each}}
         </div>
       </div>
       {{/each}}
