change main page

--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -9,7 +9,7 @@
   <div class="wrapper">
     {{>header}}
     <div class="about">
-      <p>Здесь я собираю лучшие на мой вкус афоризмы. Aфоризм - это житейская мудрость, краткая, емкая, законченная
+      <p>Aфоризм - это житейская мудрость, краткая, емкая, законченная
         мысль, которая при должном употреблении может
         произвести
         здвиг в сознании. При чтении, не всегда, но может произойти что-то типа микро-озарения в той или иной области,
@@ -17,20 +17,16 @@
         короткий срок будет наблюдаться трансформация личности. Можно сказать постепенное оздаровление личности, что в
         итоге
         приведет в более светлым и чистым мыслям.
-        А как извество, что мыслим то чувствуем, что чувствуем то и проживаем. Все что требуется от вас это начать
-        систематически читать, перечитывать афоризмы. Так-же можно
-        читать с помощью "генератора случайных афоризмов". Главное ежедневно уделять этому немного времени, хотя бы по
-        5-10
-        мин в день, будут происходит микро-озарения что повлечет более свежий взгляд на мир и вещи в нем. Приятных
+        А как известно, что мыслим то чувствуем, что чувствуем то и проживаем. Все что от вас требуется это
+        систематически читать, перечитывать афоризмы, ну и естественно открыть и готовность к изменения. Приятных
         озарений...</p>
     </div>
 
     <div class="aphorisms-header">
       <h2>Фильтр</h2>
-
       <div class="filter-block">
         <select id="filter-by-categories">
-          {{#each aphorisms.categories}}
+          {{#each res.categories}}
           <option value={{this.machineName}}>{{this.name}}</option>
           {{/each}}
         </select>
@@ -48,7 +44,13 @@
     </div>
 
     <section class="aphorisms-container">
-      {{#each aphorisms}}
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      {{#each res.data}}
       <div class="aphorisms-item">
         <div class="aphorisms-item-top">
           <h2>{{this.author}}</h2>
