--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,24 +10,33 @@
     {{>header}}
 
     <div class="about">
-      <p>Доброго дня! На этом ресурсе я делюсь опытом из областей
-        связаных с самопознанием, развитием, поиском себя. Мне нравится позиционировать себя как молодого ученого
-        исследующего
-        разные уголки нашей не объятной вселенной и делиться всем этим.</p>
+      <p>Доброго дня! Готов к трансформации ? Начнем с афоризмов...</p>
     </div>
 
     <h2>Личностная трансформация</h2>
+    <br>
     <div class="text">
       <p>Если ты жаждишь глубинной
-        внутренней трансформации этот ресурс поможет тебе. Безусловно ключевым критерием является готовность и
-        открытость новому...
+        внутренней трансформации этот ресурс поможет тебе. Безусловно ключевым критерием является готовность к
+        изменениям и
+        открытость новому... Зачем это нужно ? Для того чтобы учиться ощущать все большее внутреннее счастье и
+        наполненность от
+        простова
+        бытия, все меньше зависящее от внешний условий. Сама возможность <span class="accent-color">Быть</span> уже
+        является большим чудом и счастьем.
+        Никто не призывает полностью отказаться от внешнего и закрыться на внутреннем мире, но внутреннее является
+        первичным по отношению к внешнему, его нужно беречь, заботиться о нем, а не давать топтать по нему и вытирать
+        ноги, это кощунство по отношению к самому себе, себе внутреннему, себе настоящему, а не о той выдуманной внешней
+        оболочке, которую мы взрастили с детства. Той оболочке, которая может обижаться, завидовать и так далее ? Хоть
+        на секунду притормози и пристально посмотри на того кто обижается(...)
       </p>
-
-      <p>Итак счастье, единственно истинный и главный компонент жизни. Если нет счастья или его мало, жизнь не имеет
-        смысла, она
-        скучна и сера. Счастье то что наполняет жизнь, делает ее яркой и красочной. Каждый человечек живущий на земле
-        желает
-        быть как можно более счастливым, радоваться и наслаждаться жизнью. Счастье это весьма эфемерное понятие, но
+    </div>
+    <br>
+    <div class="text">
+      <p>Счастье, главнейший жизненный компонент. Если мы испытываем дифицит счастья, не о каком смысле жизни не
+        может идти речь, без наполненого до краев внутренней радости жизнь не жизнь, а бесцельное существование. Счастье
+        то что наполняет жизнь, делает ее яркой и красочной. Каждый человек живущий на земле хочет быть счастливым,
+        радоваться и наслаждаться жизнью, это заложено самой природой. Счастье это весьма эфемерное понятие, но
         однозначно
         это роднится со словами, радость, любовь. Различные внешние жизненные ситуации могут вызывать эту внутреннюю
         радость...
@@ -41,13 +50,11 @@
       </p>
     </div>
 
-    {{!-- <section class="aphorisms-container">
-
-      <div class="aphorisms-header">
-        <h2>Случайные афоризмы</h2>
-      </div>
-
-      {{#each aphorisms}}
+    <br><br>
+    <h2>Афоризмы</h2>
+    <br><br>
+    <section class="aphorisms-container">
+      {{#each res.data}}
       <div class="aphorisms-item">
         <div class="aphorisms-item-top">
           <h2>{{this.author}}</h2>
@@ -56,38 +63,15 @@
         <div class="aphorisms-item-body">
           <p>{{this.body}}</p>
         </div>
+        <div class="aphorisms-tags">
+          {{#each this.tags}}
+          <span>{{this.name}}</span>
+          {{/each}}
+        </div>
       </div>
       {{/each}}
-
-      <div class="aphorisms-all">
-        <a href="#">Читать все афоризмы...</a>
-      </div>
 
     </section>
-
-    <section class="notes-container">
-
-      <div class="notes-header">
-        <h2>Случайные заметки</h2>
-      </div>
-
-      {{#each aphorisms}}
-      <div class="notes-item">
-        <div class="notes-item-top">
-          <h2>{{this.author}}</h2>
-        </div>
-
-        <div class="notes-item-body">
-          <p>{{this.body}}</p>
-        </div>
-      </div>
-      {{/each}}
-
-      <div class="notes-all">
-        <a href="#">Читать все заметки...</a>
-      </div>
-
-    </section> --}}
 
   </div>
   {{>footer}}
