--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -23,7 +23,7 @@
   <ul>
     <li><a href="/">Главная</a></li>
     <li><a href="/aphorisms">Афоризмы</a></li>
-    <li><a href="/notes">Заметки</a></li>
+    <li><a href="/notes">Аффирмации</a></li>
     <li><a href="/techniques">Техники</a></li>
   </ul>
 </div>
