--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -9,7 +9,7 @@
   <div class="wrapper">
     {{>header}}
     <div class="about">
-      <p>Aфоризм - это житейская мудрость, краткая, емкая, законченная
+      <p>Aфоризм {{!--  --}}- это житейская мудрость, краткая, емкая, законченная
         мысль, которая при должном употреблении может
         произвести
         здвиг в сознании. При чтении, не всегда, но может произойти что-то типа микро-озарения в той или иной области,
