change aphorisms page and add footer

--- a/static/sass/_media.sass
+++ b/static/sass/_media.sass
@@ -73,8 +73,9 @@
   .aphorisms-container
     justify-content: center
 
-  .aphorisms-item 
-    width: 100%
+  .aphorisms-item
+    width: 100%!important
+    
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
