--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -25,5 +25,6 @@
     <li><a href="/aphorisms">Афоризмы</a></li>
     <li><a href="/notes">Аффирмации</a></li>
     <li><a href="/techniques">Техники</a></li>
+    <li><a href="/contacts">Контакты</a></li>
   </ul>
 </div>
