--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -32,6 +32,7 @@ a
   margin-left: auto
   width: 1170px
   position: relative
+  min-height: 100vh
 
 .h2
   text-transform: uppercase
@@ -82,11 +83,9 @@ a
   border-radius: 4px
   padding: 10px 30px
   box-shadow: $md-box-shadow-1
-
   p
     text-indent: 20px
     padding-bottom: 20px
-
   a
     color: blue
 
@@ -95,6 +94,7 @@ a
   display: flex
   justify-content: space-between
   flex-wrap: wrap
+  position: relative
 
   .aphorisms-item
     box-shadow: $md-box-shadow-1
@@ -263,6 +263,7 @@ select#filter-by-author
 @keyframes lds-ring
   0%
     transform: rotate(0deg)
+
   100%
     transform: rotate(360deg)
 
@@ -270,9 +271,11 @@ select#filter-by-author
   background: #333333
   padding: 100px 0
   margin-top: 100px
+
   .wrapper
     display: flex
     justify-content: space-between
+    min-height: auto
 
     .support-project
       background: #fafa3b
