--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -9,7 +9,7 @@
   <div class="wrapper">
     {{>header}}
     <div class="about">
-      <p>Aфоризм {{!--  --}}- это житейская мудрость, краткая, емкая, законченная
+      <p>Aфоризм - это житейская мудрость, краткая, емкая, законченная
         мысль, которая при должном употреблении может
         произвести
         здвиг в сознании. При чтении, не всегда, но может произойти что-то типа микро-озарения в той или иной области,
@@ -17,8 +17,7 @@
         короткий срок будет наблюдаться трансформация личности. Можно сказать постепенное оздаровление личности, что в
         итоге
         приведет в более светлым и чистым мыслям.
-        А как известно, что мыслим то чувствуем, что чувствуем то и проживаем. Все что от вас требуется это
-        систематически читать, перечитывать афоризмы, ну и естественно открыть и готовность к изменения. Приятных
+        А как известно, что мыслим то чувствуем, что чувствуем то и проживаем. Приятных
         озарений...</p>
     </div>
 
@@ -67,7 +66,7 @@
         <div></div>
       </div>
       {{#each res.data}}
-      <div class="aphorisms-item">
+      <div style="{{aphorismsHelper this.body}}" class="aphorisms-item">
         <div class="aphorisms-item-top">
           <h2>{{this.author}}</h2>
         </div>
