--- a/views/contacts.hbs
+++ b/views/contacts.hbs
@@ -12,8 +12,8 @@
     <div class="about">
       <p>Контакты</p>
       <iframe
-        src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%B0&targets-hint=&default-sum=&button-text=12&hint=&successURL=&quickpay=shop&account=410014038527087"
-        width="423" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+        src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D1%82%D1%8C%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82&targets-hint=&default-sum=&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=http%3A%2F%2F134.209.163.196%2Fgratitude&quickpay=shop&account=410014038527087"
+        width="100%" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
     </div>
 
   </div>
