--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,7 +4,7 @@
     <a href="https://vk.com/medonomator">
       <i class="fa fa-vk" aria-hidden="true"></i>
     </a>
-    <a href="https://t.me/medonomator">
+    <a href="tg://medonomator">
       <i class="fa fa-telegram" aria-hidden="true"></i>
     </a>
 
