--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -299,4 +299,18 @@ select#filter-by-author
         color: #fafa3b
         cursor: pointer
 
+// contacts
+.contacts
+  display: flex
+  flex-direction: column
+  padding-top: 20px
+  padding-left: 20px
+  padding-bottom: 20px
+  a
+    color: #194470
+    font-size: 20px
+    transition: all .3s ease
+    &:hover
+      color: lighten(#194470, 10%)
+
 @import "media" // Всегда в конце
