--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,7 +55,7 @@
     <h2>Афоризмы</h2>
     <br><br>
     <section class="aphorisms-container">
-      {{#each res.data}}
+      {{#each aphorisms}}
       <div class="aphorisms-item">
         <div class="aphorisms-item-top">
           <h2>{{this.author}}</h2>
