--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,41 +17,22 @@
     <h2>Личностная трансформация</h2>
     <br>
     <div class="text">
-      <p>Если ты жаждишь глубинной
-        внутренней трансформации этот ресурс поможет тебе. Безусловно ключевым критерием является готовность к
-        изменениям и
-        открытость новому... Зачем это нужно ? Для того чтобы учиться ощущать все большее внутреннее счастье и
-        наполненность от
-        простова
-        бытия, все меньше зависящее от внешний условий. Сама возможность <span class="accent-color">Быть</span> уже
-        является большим чудом и счастьем.
-        Никто не призывает полностью отказаться от внешнего и закрыться на внутреннем мире, но внутреннее является
-        первичным по отношению к внешнему, его нужно беречь, заботиться о нем, а не давать топтать по нему и вытирать
-        ноги, это кощунство по отношению к самому себе, себе внутреннему, себе настоящему, а не о той выдуманной внешней
-        оболочке, которую мы взрастили с детства. Той оболочке, которая может обижаться, завидовать и так далее ? Хоть
-        на секунду притормози и пристально посмотри на того кто обижается(...)
+      <p>Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Раз ты здесь, значит, готов к переменам и
+        открыт для нового.
+        Рост счастья и состояние наполненности от простого бытия меняет даже мрачную реальность. Сама возможность <span
+          class="accent-color">Быть</span>
+        уже является большим чудом и счастьем. Постигшему эту истину раскрывается мир неограниченных возможностей.
+        Хоть на секунду притормози и пристально посмотри на того, кто задыхается в серой реальности, кто не находит себя
+        в этом мире. Может, это вовсе не ты? Давай вместе попробуем заглянуть внутрь измученной оболочки, стать ближе к
+        лучшей версии тебя.
+        В каждом разделе мы собираем то, что способно изменить любого, кто к этому стремится. Дать ответ на нужный
+        вопрос, заставить задуматься или просто вдохновить на новый день.
+        Читай, размышляй и используй то, что тебе подойдет. Удачи!
       </p>
     </div>
     <br>
-    <div class="text">
-      <p>Счастье, главнейший жизненный компонент. Если мы испытываем дифицит счастья, не о каком смысле жизни не
-        может идти речь, без наполненого до краев внутренней радости жизнь не жизнь, а бесцельное существование. Счастье
-        то что наполняет жизнь, делает ее яркой и красочной. Каждый человек живущий на земле хочет быть счастливым,
-        радоваться и наслаждаться жизнью, это заложено самой природой. Счастье это весьма эфемерное понятие, но
-        однозначно
-        это роднится со словами, радость, любовь. Различные внешние жизненные ситуации могут вызывать эту внутреннюю
-        радость...
-        Но вот не задача, любое внешнее проявление крайне не стабильно, время течет, события меняются с бешеной
-        скорость, сейчас
-        что-то появилось радость есть оно ушло и радость ушла. Получается радость находится в зависимости от внешнего
-        фактора,
-        но разве это правильно ? Есть еще более удручающий факт, любое внешнее проявление кроме любимова дела (хобби)
-        имеет
-        природу весьма быстро приедаться...
-      </p>
-    </div>
 
-    <br><br>
+    <br>
     <h2>Афоризмы</h2>
     <br><br>
     <section class="aphorisms-container">
@@ -74,6 +55,8 @@
 
     </section>
 
+    <br>
+    <h2>Аффирмации</h2>
   </div>
   {{>footer}}
 </body>
