--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -46,7 +46,7 @@
           <p>Автор</p>
           <select id="filter-by-author">
             {{#each authors}}
-            <option value={{this.machineName}}>{{this.name}}</option>
+            <option value={{this.name}}>{{this.name}}</option>
             {{/each}}
           </select>
         </div>
