--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,17 +6,13 @@
 </head>
 
 <body>
+  <div class="bg"></div>
   <div class="wrapper">
     {{>header}}
-
-    <div class="about">
-      <p>Доброго дня! Готов к трансформации ? Начнем с афоризмов...</p>
-
-    </div>
-
-    <h2>Личностная трансформация</h2>
+    {{!-- <h1>Личностная трансформация</h1> --}}
+    <h1>ТЕСТИРУЕМ RAM</h1>
     <br>
-    <div class="text">
+    <div class="header-text">
       <p>Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Раз ты здесь, значит, готов к переменам и
         открыт для нового.
         Рост счастья и состояние наполненности от простого бытия меняет даже мрачную реальность. Сама возможность <span
@@ -30,11 +26,8 @@
         Читай, размышляй и используй то, что тебе подойдет. Удачи!
       </p>
     </div>
-    <br>
 
-    <br>
     <h2>Афоризмы</h2>
-    <br><br>
     <section class="aphorisms-container">
       {{#each aphorisms}}
       <div class="aphorisms-item">
@@ -54,8 +47,6 @@
       {{/each}}
 
     </section>
-
-    <br>
     <h2>Аффирмации</h2>
   </div>
   {{>footer}}
