--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,14 +1,8 @@
 <div class="header">
   <div class="logo">
     <a href="/">
-      <img src="{{path}}img/logo/logo.jpg" alt="logo">
+      <img src="{{path}}img/svg/whale-logo.svg" alt="logo">
     </a>
-  </div>
-  <div class="sky">
-    <img src="{{path}}img/sky.png" alt="sky">
-  </div>
-  <div class="soon">
-    <img src="{{path}}img/soon.png" alt="soon">
   </div>
 </div>
 
