--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -12,6 +12,9 @@ hr
   margin-bottom: 30px
   color: #999
 
+h1
+  color: white
+
 select, input
   outline: none
 
@@ -22,6 +25,14 @@ h2
 a
   text-decoration: none
   color: #333
+
+.bg
+  background: url('../img/whale.png') no-repeat
+  background-size: cover
+  position: absolute
+  background-position: center
+  width: 100%
+  height: 80vh
 
 .hover-color
   color: $accent
@@ -44,8 +55,9 @@ a
   display: flex
   justify-content: space-between
   .logo
-    width: 280px
-    margin-top: 40px
+    width: 48px
+    margin-top: 30px
+
   .sky
     width: 250px
     margin-top: 20px
@@ -66,7 +78,7 @@ a
     font-weight: 600
     font-size: 18px
   a
-    color: #444
+    color: #FCFCFD
     &:hover
       @extend .hover-color
 
@@ -77,12 +89,11 @@ a
   text-align: center
   text-shadow: 0 1px 1px $accent
 
-.text
+.header-text
   margin-top: 20px
-  background: #f9f9f9
+  color: white
   border-radius: 4px
   padding: 10px 30px
-  box-shadow: $md-box-shadow-1
   p
     text-indent: 20px
     padding-bottom: 20px
